infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "mongoimport --db=auth --collection=users --file=/mnt/auth.users.json --jsonArray"]
          volumeMounts:
            - name: config-volume
              mountPath: /mnt
      volumes:
        - name: config-volume
          configMap:
            name: authdb-init-data
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-nodeport-srv
spec:
  type: NodePort
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27020
      targetPort: 27017
      nodePort: 32175
