infra/k8s/filter-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter
  template:
    metadata:
      labels:
        app: filter
    spec:
      containers:
        - name: filter
          image: moonsh4ke/kllejero-filter
---
apiVersion: v1
kind: Service
metadata:
  name: filter-srv
spec:
  selector:
    app: filter
  ports:
    - name: filter
      protocol: TCP
      port: 3000
      targetPort: 3000
