infra/k8s/filter-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter-mongodb
  template:
    metadata:
      labels:
        app: filter-mongodb
    spec:
      containers:
        - name: filter-mongodb
          image: mongo
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "mongoimport --db=filter --collection=filters --file=/mnt/filter_db.filter.json --jsonArray"]
          volumeMounts:
            - name: config-volume
              mountPath: /mnt
      volumes:
        - name: config-volume
          configMap:
            name: filterdb-init-data
---
apiVersion: v1
kind: Service
metadata:
  name: filter-mongodb-srv
spec:
  selector:
    app: filter-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: filter-mongodb-nodeport-srv
spec:
  type: NodePort
  selector:
    app: filter-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27019
      targetPort: 27017
      nodePort: 32180
