infra/k8s/populator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: populator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: populator
  template:
    metadata:
      labels:
        app: populator
    spec:
      containers:
        - name: populator
          image: moonsh4ke/kllejero-populator
---
apiVersion: v1
kind: Service
metadata:
  name: populator-srv
spec:
  selector:
    app: populator
  ports:
    - name: populator
      protocol: TCP
      port: 3001
      targetPort: 3001
