infra/k8s/tender-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tender-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tender
  template:
    metadata:
      labels:
        app: tender
    spec:
      containers:
        - name: tender
          image: moonsh4ke/kllejero-tender
---
apiVersion: v1
kind: Service
metadata:
  name: tender-srv
spec:
  selector:
    app: tender
  ports:
    - name: tender
      protocol: TCP
      port: 3000
      targetPort: 3000
