infra/k8s/tender-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tender-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tender-mongodb
  template:
    metadata:
      labels:
        app: tender-mongodb
    spec:
      containers:
        - name: tender-mongodb
          image: mongo
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "mongoimport --db=tender --collection=tenders --file=/mnt/tender_db.tender.json --jsonArray"]
          volumeMounts:
            - name: config-volume
              mountPath: /mnt
      volumes:
        - name: config-volume
          configMap:
            name: tenderdb-init-data
---
apiVersion: v1
kind: Service
metadata:
  name: tender-mongodb-srv
spec:
  selector:
    app: tender-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
