infra/k8s/test-nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nats
  template:
    metadata:
      labels:
        app: test-nats
    spec:
      containers:
        - name: test-nats
          image: moonsh4ke/kllejero-test-nats
---
apiVersion: v1
kind: Service
metadata:
  name: test-nats-srv
spec:
  selector:
    app: test-nats
  ports:
    - name: test-nats
      protocol: TCP
      port: 22663
      targetPort: 22663
