infra/k8s/user-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mongodb
  template:
    metadata:
      labels:
        app: user-mongodb
    spec:
      containers:
        - name: user-mongodb
          image: mongo
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "mongoimport --db=user --collection=users --file=/mnt/user_db.user.json --jsonArray"]
          volumeMounts:
            - name: config-volume
              mountPath: /mnt
      volumes:
        - name: config-volume
          configMap:
            name: userdb-init-data
---
apiVersion: v1
kind: Service
metadata:
  name: user-mongodb-srv
spec:
  selector:
    app: user-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: user-mongodb-nodeport-srv
spec:
  type: NodePort
  selector:
    app: user-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27019
      targetPort: 27017
      nodePort: 32190
