infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # for ASP.NET CORE Services
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # for ASP.NET CORE Services
spec:
  rules:
    - host: kllejero.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tender/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tender-srv
                port:
                  number: 3000
          - path: /api/tracking/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tracking-srv
                port:
                  number: 6969
          - path: /api/notification/?(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-srv
                port:
                  number: 7070
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3500
